src/objects/SAFE_Solutions__c.object
<CustomObject>
    <fields>
        <fullName>SAFE_Benefits__c</fullName>
        <label>Benefits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAFE_Brand_Deployed_To__c</fullName>
        <label>Brand Deployed To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAFE_Contact_Address__c</fullName>
        <label>Contact Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAFE_Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SAFE_Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAFE_Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SAFE_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAFE_Geography_Deployed__c</fullName>
        <label>Geography Deployed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAFE_Material_Type__c</fullName>
        <label>Material Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rigids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrugate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alu Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAFE_Price_Per_Unit__c</fullName>
        <label>Price Per Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAFE_SolutionLookupUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SAFE_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAFE_Solution_Category__c</fullName>
        <label>Solution Category</label>
        <picklist>
            <picklistValues>
                <fullName>Overt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Covert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAFE_Solution_Status__c</fullName>
        <label>Solution Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAFE_Solution_Type__c</fullName>
        <label>Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Taggents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Marks</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAFE_Solution_in_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solution in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAFE_Supplier_Address__c</fullName>
        <label>Supplier Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAFE_Supplier_Email__c</fullName>
        <label>Supplier Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SAFE_Supplier_Name__c</fullName>
        <label>Supplier Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAFE_Supplier_Phone__c</fullName>
        <label>Supplier Phone</label>
        <type>Phone</type>
    </fields>
    <label>SAFE Solutions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SAFE_Material_Type__c</columns>
        <columns>SAFE_Price_Per_Unit__c</columns>
        <columns>SAFE_Solution_Category__c</columns>
        <columns>SAFE_Solution_in_Use__c</columns>
        <columns>SAFE_Solution_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Category</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>SAFE_Solution_Category__c</columns>
        <columns>NAME</columns>
        <columns>SAFE_Benefits__c</columns>
        <columns>SAFE_Material_Type__c</columns>
        <columns>SAFE_Price_Per_Unit__c</columns>
        <columns>SAFE_Solution_in_Use__c</columns>
        <columns>SAFE_Solution_Status__c</columns>
        <columns>SAFE_Solution_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAFE_Solution_Category__c</field>
            <operation>equals</operation>
            <value>Overt</value>
        </filters>
        <filters>
            <field>SAFE_Solution_Category__c</field>
            <operation>equals</operation>
            <value>Covert</value>
        </filters>
        <filters>
            <field>SAFE_Solution_Category__c</field>
            <operation>equals</operation>
            <value>Dual</value>
        </filters>
        <label>Category</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Material_Type</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>NAME</columns>
        <columns>SAFE_Benefits__c</columns>
        <columns>SAFE_Material_Type__c</columns>
        <columns>SAFE_Price_Per_Unit__c</columns>
        <columns>SAFE_Solution_Category__c</columns>
        <columns>SAFE_Solution_in_Use__c</columns>
        <columns>SAFE_Solution_Status__c</columns>
        <columns>SAFE_Solution_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAFE_Material_Type__c</field>
            <operation>equals</operation>
            <value>Rigids</value>
        </filters>
        <filters>
            <field>SAFE_Material_Type__c</field>
            <operation>equals</operation>
            <value>Label</value>
        </filters>
        <filters>
            <field>SAFE_Material_Type__c</field>
            <operation>equals</operation>
            <value>Flexible</value>
        </filters>
        <filters>
            <field>SAFE_Material_Type__c</field>
            <operation>equals</operation>
            <value>Carton</value>
        </filters>
        <filters>
            <field>SAFE_Material_Type__c</field>
            <operation>equals</operation>
            <value>Corrugate</value>
        </filters>
        <label>Material Type</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Price_per_unit</fullName>
        <columns>NAME</columns>
        <columns>SAFE_Benefits__c</columns>
        <columns>SAFE_Material_Type__c</columns>
        <columns>SAFE_Price_Per_Unit__c</columns>
        <columns>SAFE_Solution_Category__c</columns>
        <columns>SAFE_Solution_in_Use__c</columns>
        <columns>SAFE_Solution_Status__c</columns>
        <columns>SAFE_Solution_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAFE_Price_Per_Unit__c</field>
            <operation>greaterThan</operation>
            <value>EUR 0</value>
        </filters>
        <filters>
            <field>SAFE_Price_Per_Unit__c</field>
            <operation>lessThan</operation>
            <value>EUR 100</value>
        </filters>
        <label>Price per unit</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Solutions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAFE Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SAFE_ContactPhoneIsEmpty</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( SAFE_Contact_Phone__c, &quot;(\\d){10}&quot;))</errorConditionFormula>
        <errorDisplayField>SAFE_Contact_Phone__c</errorDisplayField>
        <errorMessage>Contact Phone number should not be blank or It should  contain 10 digit number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAFE_SupplierPhoneIsEmpty</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( SAFE_Supplier_Phone__c , &quot;(\\d){10}&quot;))</errorConditionFormula>
        <errorDisplayField>SAFE_Supplier_Phone__c</errorDisplayField>
        <errorMessage>Supplier Phone number should not be blank or It should  contain 10 digit number.</errorMessage>
    </validationRules>
</CustomObject>